fixed missing background image

--- a/src/components/flashcards/cards/flashcard.css
+++ b/src/components/flashcards/cards/flashcard.css
@@ -50,7 +50,7 @@
 
 .flashcard-back {
   transform: rotateY(180deg);
-  background-image: url("beige-wooden-table-wooden-background.jpg");
+  background-image: url("beige-wooden-textured-flooring-background.jpg");
 }
 
 .flashcard-text {
